// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection should handle PAGE_CHANGE 1`] = `
Object {
  "currentPage": undefined,
  "itemPerPage": 4,
  "selectionItems": Array [
    4,
    8,
    10,
    20,
    40,
  ],
}
`;

exports[`Selection should handle SELECTION_CHANGE 1`] = `
Object {
  "currentPage": 0,
  "itemPerPage": undefined,
  "selectionItems": Array [
    4,
    8,
    10,
    20,
    40,
  ],
}
`;

exports[`Selection should return the initial state 1`] = `
Object {
  "currentPage": 0,
  "itemPerPage": 4,
  "selectionItems": Array [
    4,
    8,
    10,
    20,
    40,
  ],
}
`;
